--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <input name="canvas-height" id="canvas-height" type="number" min="10" max="1400" step="10" />
         </div>
         <button type="submit">GENERATE</button>
+        <button id="run" type="button">RUN</button>
       </form>
     </div>
   </body>
