--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
       <form id="form">
         <div class="form-action">
           <label for="canvas-width">CANVAS WIDTH</label>
-          <input name="canvas-width" id="canvas-width" type="number" min="10" max="1400" step="10" />
+          <input name="canvas-width" id="canvas-width" type="number" min="10" max="2000" step="10" />
         </div>
         <div class="form-action">
           <label for="canvas-height">CANVAS HEIGHT</label>
-          <input name="canvas-height" id="canvas-height" type="number" min="10" max="1400" step="10" />
+          <input name="canvas-height" id="canvas-height" type="number" min="10" max="2000" step="10" />
+        </div>
+        <div class="form-action">
+          <label for="cell-radius">CELL RADIUS</label>
+          <input name="cell-radius" id="cell-radius" type="number" min="10" max="40" step="10" />
         </div>
         <button type="submit">GENERATE</button>
         <button id="run" type="button">RUN</button>
